Sending classpath to the remote side; adding a RemotePlatform API.